# VidAI

./: .gitignore  package-lock.json  package.json
apps/ai-service/: README.md  main.py  pyproject.toml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/controllers/: auth.controller.ts  project.controller.ts  worker.controller.ts
apps/api/src/middleware/: auth.middleware.ts
apps/api/src/routes/: project.routes.ts  worker.routes.ts
apps/api/src/utils/: ai-service.ts  jwt.ts  render-queue.ts  worker-service.ts
apps/web/: package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/chat/[projectId]/: chat-client.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/auth/: login-form.tsx  signup-form.tsx
apps/web/components/home/: prompt-composer.tsx
apps/web/components/layout/: navbar.tsx
apps/web/components/projects/: projects-list.tsx  render-preview.tsx
apps/web/lib/: api-client.ts  auth-storage.ts
apps/worker/: README.md  config.py  http_client.py  main.py  models.py  pyproject.toml  queue_consumer.py  rendering.py
