[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.0",
    "manim>=0.20.1",
    "pydantic>=2.7.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.42.77",
    "dotenv>=0.9.9",
]
